sces-implements/sces-cmw/src/os/native.rs


    /// Get the maximum number of memory blocks in the pool
    pub fn sces_mem_pool_max_block_count(pool: ScesMemPoolHandle) -> u32;

    /// Allocate a memory block from the pool
    pub fn sces_mem_pool_alloc(pool: ScesMemPoolHandle, timeout: u32) -> *mut c_void;

    /// Free a memory block back to the pool
    pub fn sces_mem_pool_free(pool: ScesMemPoolHandle, block: *mut c_void);

    // ------------------------------------------------------------------------
    // Mutex Functions
    // ------------------------------------------------------------------------

    /// Create a new mutex
    pub fn sces_mutex_create(name: *const c_char) -> ScesMutexHandle;

    /// Delete a mutex
    pub fn sces_mutex_delete(mutex: ScesMutexHandle);

    /// Get the name of a mutex
    pub fn sces_mutex_name(mutex: ScesMutexHandle) -> *const c_char;

    /// Get the owner of a mutex
    pub fn sces_mutex_owner(mutex: ScesMutexHandle) -> ScesTaskHandle;

    /// Lock a mutex
    pub fn sces_mutex_lock(mutex: ScesMutexHandle, timeout: u32) -> ScesRetVal;

    /// Unlock a mutex
    pub fn sces_mutex_unlock(mutex: ScesMutexHandle) -> ScesRetVal;

    // ------------------------------------------------------------------------
    // Semaphore Functions
    // ------------------------------------------------------------------------

    /// Create a new semaphore
    pub fn sces_semaphore_create(name: *const c_char, max_count: u32) -> ScesSemaphoreHandle;

    /// Delete a semaphore
    pub fn sces_semaphore_delete(semaphore: ScesSemaphoreHandle);

    /// Get the name of a semaphore
    pub fn sces_semaphore_name(semaphore: ScesSemaphoreHandle) -> *const c_char;

    /// Get the current count of a semaphore
    pub fn sces_semaphore_count(semaphore: ScesSemaphoreHandle) -> u32;

    /// Take (decrement) a semaphore
    pub fn sces_semaphore_take(semaphore: ScesSemaphoreHandle, timeout: u32) -> ScesRetVal;

    /// Release (increment) a semaphore
    pub fn sces_semaphore_release(semaphore: ScesSemaphoreHandle) -> ScesRetVal;

    // ------------------------------------------------------------------------
    // Task Functions
    // ------------------------------------------------------------------------

    /// Create a new task
    pub fn sces_task_create(
        name: *const c_char, main: extern "C" fn(*mut c_void), arg: *mut c_void, stack_size: u32,
        priority: ScesTaskPriority,
    ) -> ScesTaskHandle;

    /// Create a new task with static stack allocation
    pub fn sces_task_create_static(
        name: *const c_char, main: extern "C" fn(*mut c_void), arg: *mut c_void, stack: *mut u8,
        stack_size: u32, priority: ScesTaskPriority,
    ) -> ScesTaskHandle;

    /// Delete a task
    pub fn sces_task_delete(task: ScesTaskHandle);

    /// Delete a task created with static stack allocation
    pub fn sces_task_delete_static(task: ScesTaskHandle);

    /// Get the name of a task
    pub fn sces_task_name(task: ScesTaskHandle) -> *const c_char;

    /// Get the stack size of a task
    pub fn sces_task_stack_size(task: ScesTaskHandle) -> u32;

    /// Get the priority of a task
    pub fn sces_task_priority(task: ScesTaskHandle) -> ScesTaskPriority;

    /// Get the current state of a task
    pub fn sces_task_state(task: ScesTaskHandle) -> ScesTaskState;

    /// Set the priority of a task
    pub fn sces_task_set_priority(task: ScesTaskHandle, priority: ScesTaskPriority) -> ScesRetVal;

    /// Suspend a task
    pub fn sces_task_suspend(task: ScesTaskHandle) -> ScesRetVal;

    /// Resume a suspended task
    pub fn sces_task_resume(task: ScesTaskHandle) -> ScesRetVal;

    // ------------------------------------------------------------------------
    // Timer Functions
    // ------------------------------------------------------------------------

    /// Create a new one-shot timer
    pub fn sces_timer_create_once(
        name: *const c_char, callback: extern "C" fn(*mut c_void), arg: *mut c_void,
    ) -> ScesTimerHandle;

    /// Create a new periodic timer
    pub fn sces_timer_create_periodic(
        name: *const c_char, callback: extern "C" fn(*mut c_void), arg: *mut c_void,
    ) -> ScesTimerHandle;

    /// Delete a timer
    pub fn sces_timer_delete(timer: ScesTimerHandle);

    /// Get the name of a timer
    pub fn sces_timer_name(timer: ScesTimerHandle) -> *const c_char;

    /// Get the current state of a timer
    pub fn sces_timer_state(timer: ScesTimerHandle) -> ScesTimerState;

    /// Start a timer
    pub fn sces_timer_start(timer: ScesTimerHandle, timeout: u32) -> ScesRetVal;

    /// Stop a timer
    pub fn sces_timer_stop(timer: ScesTimerHandle);
}
